fix nav links alignment

--- a/css/main.css
+++ b/css/main.css
@@ -1,35 +1,48 @@
 /*header CSS*/
 .header {
-    position: fixed;
+    position: relative;
     top: 0;
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: space-between;
     background-color: #fff;
     width: 100%;
     height: 4rem;
     padding: 0 6 rem;
 }
+.header__logo {
+  position: relative;
+  top: 0;
+  right: 10;
+  font-size: 1rem;
+  color: #335576;
+  text-decoration: none;
+}
+
+.header__navbar, .nav__link {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 6rem;
+  color: black;
+  background-color: #FFFFFF;
+}
+
+.header__list {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  /* Other styles for the navigation list */
+}
 
 .nav__link {
     display: flex;
-    list-style: none;
     padding: 0;
-    margin: 0;
+    margin-left: 0.625rem;
 }
 
-.header__logo {
-    font-size: 1rem;
-    color: #335576;
-    text-decoration: none;
-}
-
-.header__navbar {
-    display: flex;
-    padding-right: 6rem;
-    color: black;
-    background-color: #FFFFFF;
+header, body, footer {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  /* Add fallback fonts in case the primary font isn't available */
 }
 
 /*card CSS*/
@@ -71,10 +84,8 @@
   padding: 10px;
   text-align: center;
 }
-
 /* Styles for the footer images */
 .footer__image {
-  width: 0.25rem /* Adjust the width as needed */
   height: auto; /* Maintain aspect ratio */
   margin: 1rem; /* Adjust margin between images */
   justify-content: center;
@@ -84,6 +95,7 @@
 .footer__contact, .footer__hours, .footer__social {
   color: #335576; /* Color for footer title */
   text-align: center;
+  margin: 0 5rem; /* Adjust horizontal margins between sections */
 }
 
 .footer__text {
